// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with IconSize 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "opacity": 1,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#2F86F6",
            "fontSize": 21,
          },
          undefined,
          Object {
            "fontFamily": "mand-mobile",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      type="MandMobile"
    >
      
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#838794",
        "flex": 1,
        "marginLeft": 10,
        "textAlign": "left",
      }
    }
  >
    勾选按钮
  </Text>
</View>
`;

exports[`renders correctly with defaults 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "opacity": 1,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#2F86F6",
            "fontSize": 16,
          },
          undefined,
          Object {
            "fontFamily": "mand-mobile",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      type="MandMobile"
    >
      
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#838794",
        "flex": 1,
        "marginLeft": 10,
        "textAlign": "left",
      }
    }
  >
    勾选按钮
  </Text>
</View>
`;

exports[`renders correctly with disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "opacity": 1,
      },
      Object {
        "opacity": 0.3,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#2F86F6",
            "fontSize": 16,
          },
          undefined,
          Object {
            "fontFamily": "mand-mobile",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      type="MandMobile"
    >
      
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#838794",
        "flex": 1,
        "marginLeft": 10,
        "textAlign": "left",
      }
    }
  >
    勾选按钮
  </Text>
</View>
`;

exports[`renders custom content with solt 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "opacity": 1,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#2F86F6",
            "fontSize": 16,
          },
          undefined,
          Object {
            "fontFamily": "mand-mobile",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
      type="MandMobile"
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "color": "#838794",
        "flex": 1,
        "marginLeft": 10,
        "textAlign": "left",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#838794",
        }
      }
    >
      本人承诺投保人已充分了解本保险产品，并保证投保信息的真实性，理解并同意
      <Text
        style={
          Object {
            "color": "#5878b4",
          }
        }
      >
        《投保须知》
      </Text>
      ,
      <Text
        style={
          Object {
            "color": "#5878b4",
          }
        }
      >
        《保险条款》
      </Text>
    </Text>
  </View>
</View>
`;
